# ec-dj-react-template

./: .gitignore  Dockerfile  DockerfileMinio  DockerfileReact  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  entrypoint_minio.sh  nginx.conf  nginx.dev.conf  pyproject.toml  supervisord.conf
backend/: pyproject.toml
backend/apps/core/: obtain_tokens.py
backend/apps/core/admin/: user.py
backend/apps/core/controllers/: health.py
backend/apps/core/controllers/auth/: common.py  social.py
backend/apps/core/controllers/user/: base.py
backend/apps/core/exceptions/: base.py
backend/apps/core/management/commands/: copy_project_base.py  init_test_db.py  loaddata_from_dir.py  pre_init.py  remakemigrations.py
backend/apps/core/middleware/: __init__.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/mixins/: base.py
backend/apps/core/models/: user.py
backend/apps/core/responses/: success.py
backend/apps/core/routes/: api.py  root.py  ws.py
backend/apps/core/serializers/user/: base.py
backend/apps/core/tasks/: test_tasks.py
backend/apps/core/templates/core/: base.html
backend/apps/endpoints/controllers/: base.py
backend/apps/endpoints/templates/endpoints/: endpoints.html
backend/config/: asgi.py  celery.py  settings.py  side_settings.py
backend/utils/: adjango.py  aserializers.py  base.py  common.py  djrediser.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/apps/core/components/Header/: Header.jsx  header.css  header.sass
(+11 files in other folders)
